@@ -1,8 +1,9 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "6.5.0-rc1"
+    id 'io.freefair.lombok' version "6.5.0-rc1"
     id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.hidetake.swagger.generator' version '2.19.2'
 }
 
 group 'com.yoon'
@@ -20,8 +21,10 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
     implementation 'org.springdoc:springdoc-openapi-javadoc:1.6.14'
     implementation 'io.swagger:swagger-annotations:1.6.9'
+    swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.36'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
 
     testImplementation 'org.assertj:assertj-core:3.23.1'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
@@ -36,3 +39,19 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+swaggerSources {
+    openapi {
+        inputFile = file("$rootDir/openapi.yaml")
+        code {
+            language = 'spring'
+            configFile = file("$rootDir/config.json")
+            components = ['models', 'apis']
+            jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
+        }
+    }
+}
+
+compileJava.dependsOn swaggerSources.openapi.code
+sourceSets.main.java.srcDir "${swaggerSources.openapi.code.outputDir}/src/main/java"
+sourceSets.main.resources.srcDir "${swaggerSources.openapi.code.outputDir}/src/main/resources"
